[gd_scene load_steps=3 format=2]

[ext_resource path="res://Heart Space Shooter Resources/Ship.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[node name="Ship" type="Area2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -5, -5, -5, -8, -2, -8, 2, -3, 5, -3, 8, -1, 8, 1, 5, 3, 2, 3, -2, 8, -5, 8, -5, 5, -8, 5, -8, -5 )

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Ship_area_entered"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
